<resources>
    <string name="app_name">Simple Punch Card</string>
    <string name="version_text">version 0.1</string>
    <string name="file_not_exist">File does not exist!</string>
    <string name="data_folder">data</string>
    <string name="default_recipient">vntsjp@yahoo.co.jp</string>
    <string name="email_subject">Punch card record</string>
    <string name="email_text">Attached is punch card record.</string>
    <string name="chooser_msg">Send file using...</string>
    <string name="deleted">deleted</string>
    <string name="no_emailer">Email not configured!</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="log_time">Log Time</string>
    <string name="show_records">Show Records</string>
    <string name="send_records">Send Records</string>
    <string name="delete_records">Delete Records</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_email_to">Email recipient</string>
    <string name="pref_email_to_summary">Email address to send records to</string>

</resources>
