<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.maplerain.simplepunchcard.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_text"
            android:id="@+id/versionText"
            android:layout_weight="0.05" />

        <Button
            android:text="@string/check_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/check_in_btn"
            android:layout_weight="0.05"
            android:onClick="onCheckInBtn" />

        <Button
            android:text="@string/check_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/check_out_btn"
            android:layout_weight="0.05"
            android:onClick="onCheckOutBtn" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:weightSum="1">

            <TextView
                android:text="@string/hours"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:id="@+id/hour_label" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/hour_input"
                android:text="0" />

            <TextView
                android:text="@string/minutes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:id="@+id/minute_label" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/minute_input"
                android:text="0" />
        </LinearLayout>

        <Button
            android:text="@string/log_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_time_btn"
            android:layout_weight="0.05"
            android:onClick="onLogTimeBtn" />

        <Button
            android:text="@string/show_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/show_file_btn"
            android:layout_weight="0.05"
            android:onClick="onShowFileBtn" />

        <Button
            android:text="@string/send_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_file_btn"
            android:layout_weight="0.05"
            android:onClick="onSendFileBtn" />

        <Button
            android:text="@string/delete_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_file_btn"
            android:layout_weight="0.05"
            android:onClick="onDeleteFileBtn" />

        <Button
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_btn"
            android:layout_weight="0.05"
            android:onClick="onSettingsBtn" />

        <Button
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exit_button"
            android:layout_weight="0.05"
            android:onClick="onExitBtn" />

    </LinearLayout>

</RelativeLayout>
